Adjusted faq background for header visibility (not final). Header is also fixed position.

--- a/frontend/src/app/components/ui/faq-card/faq.module.css
+++ b/frontend/src/app/components/ui/faq-card/faq.module.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #FEA70A;
-  --background: #111435;
+  --background: #000317;
 }
 
 .shadow-border {
